libdebian-installer (0.37) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Define Broadcom BCM947XX for archdetect.

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 30 Dec 2005 22:20:12 +0100

libdebian-installer (0.36) unstable; urgency=low

  [ Sven Luther ]
  * No need to list CHRP IBM models explicitly, as this breaks with models we
    don't know about or newer models, which is unnecessary. (Closes: #338045)

 -- Colin Watson <cjwatson@debian.org>  Mon, 14 Nov 2005 18:58:35 +0000

libdebian-installer (0.35) unstable; urgency=low

  * Add archdetect support for ADS boards running the 2.6 kernel,
    including the BitsyXb.

 -- Joey Hess <joeyh@debian.org>  Wed,  7 Sep 2005 15:07:32 -0400

libdebian-installer (0.34) unstable; urgency=low

  * Collapse all ADS boards into one ads subarch.

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 10:10:07 -0400

libdebian-installer (0.33) unstable; urgency=low

  * Add various ADS arm boards to the archdetect list
    (AGX, VGX, GCX, Sphere).

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 09:53:00 -0400

libdebian-installer (0.32) unstable; urgency=low

  * Update GPL notices with the FSF's new address.
  * Use -ggdb instead of -gstabs. The latter doesn't work on ia64.

 -- Colin Watson <cjwatson@debian.org>  Wed,  3 Aug 2005 10:36:54 +0100

libdebian-installer (0.31) unstable; urgency=low

  [ Colin Watson ]
  * When compiling with gcc, perform printf format string checking on the
    arguments to di_snprintfcat.
  * Add di_system_subarch_analyze, moved here from hw-detect.
  * Bump shared library revision to 5.

  [ Joey Hess ]
  * Add loop devices to devfs table. Closes: #320039

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 10:08:44 +0100

libdebian-installer (0.30) unstable; urgency=low

  * Bastian Blank
    - Bump shared library revision to 4.
    - Deprecate di_prebaseconfig_append and di_system_prebaseconfig_append.
    - Add di_exec_path(_full) (execvp wrapper).
  * Joey Hess