@@ -2,6 +2,7 @@ libdebian-installer (0.37) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * Define Broadcom BCM947XX for archdetect.
+  * Define Linksys NSLU2 for archdetect.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 30 Dec 2005 22:20:12 +0100
 
